chore: adjust colors according to the design palette

--- a/src/presentation/styles/colors.scss
+++ b/src/presentation/styles/colors.scss
@@ -1,22 +1,3 @@
-// Cores Descomplica do livro da marca
-
-$greenDescomplica: #00e88f;
-$greenAuxiliar1: #66ffbd;
-$greenAuxiliar2: #239e5d;
-$greenMouseHover: #00fa9a;
-$greenCallToAction: #08db88;
-$greenBodyText: #00c974;
 $white: #fff;
-$black: #000;
-$purple: #b466fa;
-$orange: #fb7b01;
-$yellow: #fed500;
-$blue: #269ff9;
-$red: #fb5b57;
-
-// Cores Auxiliares
-$darkWhite: #f2f0e4;
-$darkGrey: #a9a9a9;
-$lightGrey: #c0c0c0;
-$grey: #696969;
-$lightBlack: #717171;
+$grey: #a5a5a5;
+$red: #d42026;
