refactor: adjust header layout to fix margin

--- a/src/presentation/components/Header/styles.scss
+++ b/src/presentation/components/Header/styles.scss
@@ -5,6 +5,7 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
+  margin-bottom: 34px;
 }
 .systemTitleContainer {
   flex-direction: row;
