chore: uses search component

--- a/src/presentation/pages/Dashboard/styles.scss
+++ b/src/presentation/pages/Dashboard/styles.scss
@@ -2,6 +2,24 @@
 
 .dashboard {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   width: 100%;
+}
+
+.searchContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.searchLabel {
+  color: $red;
+  font-size: 16px;
+  margin-bottom: 2px;
+}
+
+.searchInput {
+  width: 400px;
+  height: 31px;
+  border: 1px solid $grey;
 }
