--- a/src/presentation/pages/Dashboard/styles.scss
+++ b/src/presentation/pages/Dashboard/styles.scss
@@ -3,23 +3,14 @@
 .dashboard {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   width: 100%;
+  padding: 20px 42px 0px 42px;
 }
 
-.searchContainer {
-  display: flex;
-  flex-direction: column;
-}
-
-.searchLabel {
-  color: $red;
-  font-size: 16px;
-  margin-bottom: 2px;
-}
-
-.searchInput {
-  width: 400px;
-  height: 31px;
-  border: 1px solid $grey;
+.footer {
+  background-color: $red;
+  height: 10px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
