chore: replace to render Table Component

--- a/src/presentation/components/Pagination/styles.scss
+++ b/src/presentation/components/Pagination/styles.scss
@@ -11,7 +11,10 @@
   list-style: none;
   display: flex;
 
-  justify-content: center;
+  align-self: center;
+  position: absolute;
+  bottom: 0;
+  margin: 16px 0 16px 0;
 }
 
 .pageNumbers li {
@@ -62,4 +65,33 @@
 
 .icon {
   font-size: 1.5rem;
+}
+
+.tableContent {
+  width: 100%;
+  tr > th {
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    font-size: 16px;
+    color: $grey;
+    border-right: 1px solid $red;
+    border-bottom: 1px solid $red;
+
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+  td {
+    font-size: 16px;
+    text-align: center;
+    padding: 10px 10px 10px 10px;
+    color: $grey;
+    border-right: 1px solid $red;
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+
 }
