chore: adjust table styles

--- a/src/presentation/components/Table/HeroCard/styles.scss
+++ b/src/presentation/components/Table/HeroCard/styles.scss
@@ -2,6 +2,7 @@
 
 .tableBodyItem {
   &:hover {
-    background-color: rgba(46, 46, 46, 0.219);
+    background-color: $red;
+    opacity: 30%;
   }
 }
