--- a/src/presentation/components/Pagination/styles.scss
+++ b/src/presentation/components/Pagination/styles.scss
@@ -12,9 +12,20 @@
   display: flex;
 
   align-self: center;
-  position: absolute;
+  position: relative;
   bottom: 0;
   margin: 16px 0 16px 0;
+}
+
+.singlePage {
+  list-style: none;
+  display: flex;
+
+  align-self: center;
+  position: relative;
+  bottom: 0;
+  margin: 16px 0 16px 0;
+  min-height: 65vh;
 }
 
 .pageNumbers li {
@@ -26,6 +37,7 @@
   display: flex;
   align-items: center;
   align-self: center;
+  justify-content: center;
   background-color: $red;
   color: $white;
   border-radius: 25px;
@@ -39,6 +51,8 @@
   display: flex;
   align-items: center;
   align-self: center;
+  justify-content: center;
+
   color: $red;
   border: 1px solid $red;
   border-radius: 25px;
@@ -54,6 +68,16 @@
   font-size: 1.5rem;
   cursor: pointer;
 }
+.singlePage li button {
+  background-color: transparent;
+  border: none;
+  color: $red;
+  font-size: 1.5rem;
+  cursor: pointer;
+  min-height: 100%;
+  min-height: 65vh;
+}
+
 .pageNumbers li button:hover {
   background-color: transparent;
   color: $red;
@@ -92,6 +116,4 @@
       border-right: none;
     }
   }
-
-
 }
