--- a/src/presentation/components/Table/HeroCard/styles.scss
+++ b/src/presentation/components/Table/HeroCard/styles.scss
@@ -5,16 +5,21 @@
   margin: 20px 0 20px 10px;
 
   .characterAvatar {
-    height: 50px;
-    width: 50px;
-    border-radius: 25px;
+    height: 58px;
+    width: 58px;
+    border-radius: 29px;
     margin-right: 25px;
   }
-
   .characterName {
     align-self: center;
+    justify-content: flex-start;
     color: $black;
   }
+}
+
+.itemName {
+  color: $black;
+  float: left;
 }
 
 .tableBodyItem {
