--- a/src/presentation/components/Pagination/styles.scss
+++ b/src/presentation/components/Pagination/styles.scss
@@ -20,12 +20,13 @@
 .singlePage {
   list-style: none;
   display: flex;
+  align-items: stretch;
 
   align-self: center;
   position: relative;
   bottom: 0;
   margin: 16px 0 16px 0;
-  min-height: 65vh;
+  min-height: 68vh;
 }
 
 .pageNumbers li {
@@ -74,8 +75,7 @@
   color: $red;
   font-size: 1.5rem;
   cursor: pointer;
-  min-height: 100%;
-  min-height: 65vh;
+  min-height: 68vh;
 }
 
 .pageNumbers li button:hover {
