--- a/src/presentation/pages/Dashboard/styles.scss
+++ b/src/presentation/pages/Dashboard/styles.scss
@@ -1,5 +1,10 @@
 @import "../../styles/index.scss";
 
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
 .dashboard {
   display: flex;
   flex-direction: column;
