--- a/src/presentation/components/Table/HeroCard/styles.scss
+++ b/src/presentation/components/Table/HeroCard/styles.scss
@@ -22,6 +22,12 @@
   float: left;
 }
 
+.itemColumn {
+  @media only screen and (max-width: $breakpoint) {
+    display: none;
+  }
+}
+
 .tableBodyItem {
   &:hover {
     background-color: $red;
