--- a/src/presentation/components/Search/styles.scss
+++ b/src/presentation/components/Search/styles.scss
@@ -3,6 +3,13 @@
 .searchContainer {
   display: flex;
   flex-direction: column;
+
+  @media only screen and (max-width: $breakpoint) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+  }
 }
 
 .searchLabel {
@@ -20,4 +27,8 @@
   outline: 0;
   font-size: 14px;
   padding: 0 10px 0 10px;
+
+  @media only screen and (max-width: $breakpoint) {
+    width: 290px;
+  }
 }
