--- a/src/presentation/pages/Dashboard/styles.scss
+++ b/src/presentation/pages/Dashboard/styles.scss
@@ -8,8 +8,12 @@
 .dashboard {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  padding: 20px 42px 0px 42px;
+  // width: 100%;
+  padding: 0px 42px 0px 42px;
+
+  @media only screen and (max-width: $breakpoint) {
+    padding: 0px 30px 0px 30px;
+  }
 }
 
 .footer {
