--- a/src/presentation/components/Table/HeroDetailsModal/styles.scss
+++ b/src/presentation/components/Table/HeroDetailsModal/styles.scss
@@ -18,7 +18,6 @@
   box-sizing: border-box;
   animation: fade-in 1s 1 linear;
   overflow: hidden;
-
 }
 
 @keyframes fade-in {
@@ -35,6 +34,7 @@
   width: 700px;
   height: 600px;
   background-color: $white;
+  border-radius: 10px;
 
   .modalHeader {
     .modalClose {
@@ -42,9 +42,73 @@
       border: none;
       outline: none;
       padding: 10px 10px 10px 10px;
+      border-radius: 10px;
       .icon {
         font-size: 20px;
       }
     }
   }
+}
+
+.modalBody {
+  padding: 20px 20px 20px 20px;
+
+  .characterInfoContainer {
+    display: flex;
+    justify-content: center;
+
+    .characterAvatar {
+      height: 70px;
+      width: 70px;
+      border-radius: 35px;
+      margin-right: 25px;
+    }
+    .characterName {
+      align-self: center;
+      justify-content: flex-start;
+      color: $black;
+      font-size: 25px;
+    }
+  }
+  .division {
+    background-color: $red;
+    height: 1px;
+    opacity: 0.7;
+  }
+  .descriptionContainer {
+    margin: 20px 0px 10px 0px;
+    font-size: 16px;
+    color: $black;
+  }
+  .dataContainer {
+    margin: 20px 0px 10px 0px;
+  }
+
+  .buttonContainer {
+    margin: 20px 0px 10px 0px;
+
+    .infoTitleContainer {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+      .infoPlus {
+        font-size: 22px;
+        color: $red;
+        font-weight: bold;
+      }
+      .infoText {
+        font-size: 22px;
+        color: $black;
+        font-weight: bold;
+        margin-left: 3px;
+      }
+    }
+  }
+}
+
+.buttonsContainer {
+  margin: 20px 0px 10px 0px;
+
+  display: flex;
+  justify-content: center;
 }
