refactor: adjust layout to uses global when something repeats

--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -1,7 +1,6 @@
 @import "../styles/colors.scss";
+@import "../styles/breakpoints.scss";
 
-$small: 360px;
-$medium: 850px;
 
 * {
   font-family: sans-serif;
@@ -13,4 +12,35 @@ $medium: 850px;
 
 body {
   background-color: $white;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  background-color: $red;
+  color: $white;
+}
+
+tr > th {
+  padding: 10px 10px 10px 10px;
+  text-align: center;
+  font-size: 16px;
+  border-right: 9px solid $white;
+
+  &:last-child {
+    border-right: none;
+  }
+}
+
+td {
+  font-size: 16px;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  color: $black;
+  border-bottom: 1px solid $red;
+  &:last-child {
+    border-right: none;
+  }
 }
