--- a/src/presentation/components/Table/HeroDetailsModal/styles.scss
+++ b/src/presentation/components/Table/HeroDetailsModal/styles.scss
@@ -44,7 +44,8 @@
       padding: 10px 10px 10px 10px;
       border-radius: 10px;
       .icon {
-        font-size: 20px;
+        font-size: 25px;
+        color: $red;
       }
     }
   }
