--- a/src/presentation/components/Table/HeroDetailsModal/styles.scss
+++ b/src/presentation/components/Table/HeroDetailsModal/styles.scss
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(255, 0, 0, 0.5);
+  background-color: $backgroundRedOpacity50;
   width: 100%;
   height: 100%;
   display: flex;
